# freecad-xr-workbench

./: Init.py  InitGui.py  README-Addon.md  README.md  XRWorkbench_rc.py  commonXR.py  controllerXR.py  disableMirror.py  documentInteraction.py  enableMirror.py  menuCoin.py  metadata.txt  movementXR.py  package.xml  preferences.py  previewCoin.py  reloadScenegraph.py  startXR.py  stopXR.py  toggleTPPCamera.py
Gui/Resources/: XRWorkbench.qrc
Gui/Resources/preferences/: XRPreferences.ui
Resources/Gui/Resources/: XRWorkbench.qrc
Resources/Gui/Resources/preferences/: XRPreferences.ui
Resources/controllers/: right_con.iv
Resources/doc/: Extending_Workbench.md  TPP_Camera_Tracker.md
controllers/: left_con.iv
doc/: EGL_Howto.md
freecad/XR/: XRWorkbench_rc.py  __init__.py  commonXR.py  controllerXR.py  disableMirror.py  documentInteraction.py  enableMirror.py  init_gui.py  menuCoin.py  movementXR.py  preferences.py  previewCoin.py  qtWidgetRender.py  reloadScenegraph.py  startXR.py  stopXR.py  toggleTPPCamera.py
